# min_llm_server_client

./: MANIFEST.in  README.md  install.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
src/: local_llm_inference_api_client.py  local_llm_inference_server_api.py
src/min_llm_server_client/: api_server.py  api_server_vllm.py
src/min_llm_server_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
