[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "min-llm-server-client"
version = "0.3.10"  # bump each release
description = "A minimal API server for local HuggingFace LLMs"
readme = "README.md"
requires-python = ">=3.6"
license = "Apache-2.0"
authors = [{ name = "Afshin Sadeghi", email = "sadeghi.afshin@gmail.com" }]
dependencies = [
  "transformers>=4.40.0",
  "accelerate>=0.28.0",
  "torch",
  "flask",
  "sentencepiece",
  "pynvml"
]

[project.optional-dependencies]
vllm = [
  "vllm>=0.3.0"
]

[project.scripts]
min-llm-server = "min_llm_server_client.api_server:main"
min-llm-server-vllm = "min_llm_server_client.api_server_vllm:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
