[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "min-llm-server-client"
version = "0.4.2"  
description = "A minimal API server for local HuggingFace LLMs or VLLM LLMs"
readme = "README.md"
requires-python = "==3.12.*"
license = "Apache-2.0"
authors = [{ name = "Afshin Sadeghi", email = "sadeghi.afshin@gmail.com" }]
dependencies = [
  "kernels",
  "transformers>=4.40.0",
  "accelerate>=0.28.0",
  "torch==2.10",
  "flask",
  "sentencepiece",
  "nvidia-ml-py"
]

[project.optional-dependencies]
vllm = [
  "vllm>=0.3.0"
]

[project.scripts]
min-llm-server = "min_llm_server_client.api_server:main"
min-llm-server-vllm = "min_llm_server_client.api_server_vllm:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
